<resources>
    <string name="app_name">Rede dos Saberes</string>
    <string name="settings">configurações</string>
    <string name="back">back</string>
    <string name="botao_tela_inicial">O que fica ao redor dos botões da tela inicial</string>
    <string name="logo">logo do labetinho</string>
    <string name="primeiro_botao">Ver Projetos</string>
    <string name="segundo_botao">Criar Projetos</string>
    <string name="terceiro_botao">Sair</string>
    <string name="continuar_sem_login">Continuar sem Login</string>
    <string name="ja_possui_conta">Já possui Conta?</string>
    <string name="parse_server_url">http://35.196.36.92:1337/parse/</string>
    <string name="parse_app_id">RDS</string>
    <string name="enviar">enviar</string>
    <string name="pontuacao">pontuação</string>
    <string name="perguntas">ver perguntas</string>
    <string name="fazerPerguntas">fazer perguntas</string>
    <string name="sair">sair</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="confirmar">Confirme a Senha</string>
    <string name="apelido">Apelido</string>
    <string name="remover">remover passo</string>
    <string name="adicionar">Adicionar</string>
    <string name="adicionarPasso">Adicionar Passo</string>
    <string name="confirmarParent">Confirmar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
